# fertig

./: .readthedocs.yaml  README.md  pyproject.toml  tox.ini
.github/workflows/: validate.yml
src/docs/: conf.py  index.rst  make.py
src/fertig/: main.py
