[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "works"
authors = [
    {name = "Nathaniel Schaaf", email = "nathaniel.schaaf@gmail.com"}
]
description = "works"
version = "1.0.0a0"

readme = "README.md"
requires-python = ">=3.9"
license = {text = "Apache Software License"}

classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Typing :: Typed",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/schana/works"
Issues = "https://github.com/schana/works/issues"

[project.optional-dependencies]
dev = [
    "black",
    "isort",
    "tox",
    "pytest",
]

[tool.isort]
profile = "black"
